WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
200579
Tapping buttons in Data Detectors lookup previews doesn't work
https://bugs.webkit.org/show_bug.cgi?id=200579
Summary
Tapping buttons in Data Detectors lookup previews doesn't work
Tim Horton
Reported
2019-08-09 10:17:19 PDT
Tapping buttons in Data Detectors lookup previews doesn't work
Attachments
Patch
(7.06 KB, patch)
2019-08-09 10:21 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(7.12 KB, patch)
2019-08-09 10:25 PDT
,
Tim Horton
jbedard
: commit-queue+
Details
Formatted Diff
Diff
Patch
(1.12 KB, patch)
2019-08-12 09:58 PDT
,
Jonathan Bedard
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2019-08-09 10:21:39 PDT
Created
attachment 375932
[details]
Patch
Tim Horton
Comment 2
2019-08-09 10:21:41 PDT
<
rdar://problem/54056519
>
Tim Horton
Comment 3
2019-08-09 10:25:44 PDT
Created
attachment 375933
[details]
Patch
Megan Gardner
Comment 4
2019-08-09 11:23:33 PDT
Comment on
attachment 375933
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=375933&action=review
> Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:8298 > + if ([configuration isKindOfClass:getDDContextMenuConfigurationClass()]) {
File a bug to clean this all up once the SPI has settled?
> Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:8305 > + shouldExpandPreview = !!ddConfiguration.interactionViewControllerProvider;
I find it odd that the SPI had a var for this, but now does not? But I'm assuming you know what's going on here..
Tim Horton
Comment 5
2019-08-09 11:24:41 PDT
Comment on
attachment 375933
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=375933&action=review
>> Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:8298 >> + if ([configuration isKindOfClass:getDDContextMenuConfigurationClass()]) { > > File a bug to clean this all up once the SPI has settled?
Sure
>> Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:8305 >> + shouldExpandPreview = !!ddConfiguration.interactionViewControllerProvider; > > I find it odd that the SPI had a var for this, but now does not? But I'm assuming you know what's going on here..
They upgraded from a bool to a nullable block that returns a VC 🤷♂️
Tim Horton
Comment 6
2019-08-09 12:50:46 PDT
Committed
r248469
: <
https://trac.webkit.org/changeset/248469
>
Jonathan Bedard
Comment 7
2019-08-12 09:56:11 PDT
This broke the iOS 13 seed build...we don't have bots for it yet, but I've been building it pretty regularly locally looking for this sort of thing.
Jonathan Bedard
Comment 8
2019-08-12 09:58:00 PDT
Reopening to attach new patch.
Jonathan Bedard
Comment 9
2019-08-12 09:58:01 PDT
Created
attachment 376073
[details]
Patch
WebKit Commit Bot
Comment 10
2019-08-12 11:42:26 PDT
Comment on
attachment 376073
[details]
Patch Clearing flags on attachment: 376073 Committed
r248535
: <
https://trac.webkit.org/changeset/248535
>
WebKit Commit Bot
Comment 11
2019-08-12 11:42:27 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug